# starch

./: .gitignore  .releaserc.json  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.app.config.ts  vite.config.ts  vite.embed.config.ts  vite.v2.config.ts
.github/workflows/: deploy-pages.yml  preview.yml  release.yml
.serena/: project.yml
docs/: design-layout-system.md  diagram-animate-spec.md  diagram-animator-v4.jsx  dsl-editor-requirements.md  dsl-review-2026-06-27.md  mkdocs-snippet.js
mkdocs-plugin/: README.md  pyproject.toml
mkdocs-plugin/mkdocs_starch/: __init__.py
src/: App.tsx  StarchDiagram.ts  embed.ts  embed.tsx  index.ts
src/__tests__/: integration.test.ts
src/animation/: applyTracks.ts  cameraExpansion.ts  evaluator.ts  interpolate.ts  timeline.ts
src/app/: App.tsx  index.html
src/components/: Diagram.tsx  Editor.tsx  ExportDialog.tsx  SampleBrowser.tsx  Timeline.tsx
src/core/: Scene.ts  colours.ts  schemas.ts  types.ts
src/dsl/: animateCompletions.ts  astAdapter.ts  astCompletions.ts  astDecorations.ts  astEmitter.ts  astParser.ts  astTypes.ts  astWalker.ts  colorNames.ts  dslMeta.ts  formatHints.ts  generator.ts  hintExecutors.ts  modelPathWalker.ts  parser.ts  resolveShortcut.ts  schemaIntrospect.ts  schemaWalker.ts  tokenizer.ts  types.ts  walkContext.ts
src/editor/: StructuralEditor.tsx  completionSource.ts  completions.ts  dslBuilder.ts  dslClickTarget.ts  dslCompletionSource.ts  dslCursorPath.ts  dslLanguage.ts  dslLinter.ts  dslTextReplace.ts  editorSession.ts  editorStyles.css  exporters.ts  index.ts  (+12 more)
(+340 files in other folders)
