[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-starch"
version = "0.1.0"
description = "MkDocs plugin for rendering starch animated diagrams"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["mkdocs>=1.0"]

[project.entry-points."mkdocs.plugins"]
starch = "mkdocs_starch:StarchPlugin"
